--- a/views/projeto.jade
+++ b/views/projeto.jade
@@ -21,7 +21,7 @@ block content
                 li.icomenu
                   a(href="#compromisso", style='color: #000 !important;') Compromisso
                 li.icomenu
-                  a(href="#", style='color: #000 !important;') Equipa
+                  a(href="#equipa", style='color: #000 !important;') Equipa
     a(name='+metro')
     div.box
       div.container
@@ -66,7 +66,24 @@ block content
           textoblue  +
           textored Metro
           , queremos levar a sua ideia ao poder local.
-
+    a(name='equipa')
+    hr
+    div.box
+      div.container
+        h2(style='font-size:50px;')
+          textoblue +
+          textored  Equipe
+        div(class="row placeholders", style='display:inline; float:center;')
+          div.equipa(class="placeholder")
+            img(src='../images/PIC_Matheus.jpg', class='img-responsive' style='padding')
+            h4 Matheus Oliveira
+            div.h2 Mineiro de BH
+            h4.bio(class="text-muted") Doutorando em Sistemas de Transporte pelo Programa MITPortugal; e membro do LXAMANHÃ em Lisboa.
+          div.equipa(class="placeholder")
+            img(src='../images/PIC_BV.jpg', class='img-responsive')
+            h4 Bruno Vasconcelos
+            div.h2 Português de Lisboa
+            h4.bio(class="text-muted") Sociólogo e Planeador. Investigador nas áreas da Criatividade, Comunicação e Bairros Criativos.
     footer(class="footer")
       div.container
         div.col-md-4
