--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -16,6 +16,19 @@
   }
 }
 
+.bio{
+  font-size:13px;
+  color:4f4f4f;
+  margin-bottom:10px;
+  line-height: 20px;
+}
+
+.equipa{
+  display: inline-block;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 250px;
+}
 /* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
