--- a/views/addidea.jade
+++ b/views/addidea.jade
@@ -45,11 +45,11 @@ block content
             .h2 Onde termina a sua linha?
             input#inputIdeaRef3(type='text', placeholder='ex. #UFMG, #taquaril, #hospJuliaKubitscheck', class="incomment",  style='width:100%')
           div(class='col-md-12')
-            .h2 Descreva o seu trajeto
-            textarea(id="inputIdeaDesc", cols="40", rows="5", placeholder='Descreva sua proposta' class="incomment",  style='width:100%')
+            .h2 Descreva como essa linha atenderia suas necessidades
+            textarea(id="inputIdeaDesc", cols="40", rows="7", placeholder='ex. Usaria muito, porque cria um melhor acesso ao hospital, universidade, meu local de trabalho, etc...', class="incomment",  style='width:100%')
           div(class='col-md-12')
             button#btnAddIdea(class='btn login') Nova Proposta
-              span(class="glyphicon glyphicon-ok")
+
     footer(class="footer")
       div.container
         div.col-md-4
