--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -2,15 +2,15 @@ html
     head
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(charset="utf-8")
-        link(rel='stylesheet', href='https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css')
-        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.css')
+        link(rel='stylesheet', href='../stylesheets/leaflet/leaflet.css')
+        link(rel='stylesheet', href='../stylesheets/leaflet/leaflet.draw.css')
         link(rel='stylesheet', href='../stylesheets/jquery/jquery-ui.css')
         link(rel='stylesheet', href='../stylesheets/style2.css')
         link(rel='stylesheet', href='../stylesheets/bootstrap/bootstrap.min.css')
         link(rel='stylesheet', href="../stylesheets/rateyo/jquery.rateyo.min.css")
-        script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js")
+        script(src="../javascripts/jquery/jquery.min.js")
         script(src='../javascripts/bootstrap/bootstrap.min.js')
-        script(src='https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js')
+        script(src='../javascripts/leaflet/leaflet.js')
 
     header(style='margin-bottom:80px;')
       nav(class='navbar banner navbar-fixed-top')
