--- a/views/signin.jade
+++ b/views/signin.jade
@@ -9,7 +9,7 @@ block content
 					img(src='../images/FACEBOOK.JPG', style='margin-top:20px; width:100%; margin-left:auto; margin-right:auto; margin-bottom:20px')
 				div(class='col-md-12', style='font-size:21px; text-align:center; font-style:italic') ou
 				#log(class='col-md-12')
-					div.h2(style='margin-bottom:2px') Email
+					div.h2(style='margin-bottom:2px') Nome
 					input#logEmail(type='text', class="register")
 					div.h2(style='margin-bottom:2px') Senha
 					input#logPass(type='password', class="register")
