--- a/views/projeto.jade
+++ b/views/projeto.jade
@@ -6,7 +6,7 @@ block content
         div(style='height:260')
           div.col-md-4
             img.logoProjeto(src='../images/Logo.jpg')
-          div.col-md-8(style='padding-right: 0px !important;')
+          div.col-md-8
             div.col-md-12(style='float: right !important; padding-right: 0px !important;')
               h2.texto(style='font-size: 40px; float: right !important; padding-right: 0px !important; padding-top: 80px;') Sobre o
                 textored  Projeto
@@ -21,7 +21,7 @@ block content
                 li.icomenu
                   a(href="#compromisso", style='color: #000 !important;') Compromisso
                 li.icomenu
-                  a(href="#equipa", style='color: #000 !important;') Equipa
+                  a(href="#equipa", style='color: #000 !important;') Equipe
     a(name='+metro')
     div.box
       div.container
