--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -23,6 +23,78 @@
   line-height: 20px;
 }
 
+.social {
+    display: none;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.social ul {
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+}
+
+.social ul li {
+    list-style: none outside none;
+    display: inline-block;
+    padding: 0px !important;
+}
+
+.social i {
+    width: 35px;
+    height: 35px;
+    color: #FFF;
+    background-color: #909AA0;
+    font-size: 22px;
+    text-align:center;
+    padding-top: 12px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social i:hover {
+    color: #FFF;
+    text-decoration: none;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social .fa-facebook {
+  background-color: rgba(64, 96, 165, 0.3);
+}
+
+.social .fa-twitter {
+    background: rgba(0, 171, 227, 0.3);
+}
+
+.social .fa-google-plus {
+    background: rgba(230, 69, 34, 0.3);
+}
+
+.social .fa-facebook:hover {
+  background-color: rgba(64, 96, 165, 1);
+}
+
+.social .fa-twitter:hover {
+    background: rgba(0, 171, 227, 1);
+}
+
+.social .fa-google-plus:hover {
+    background: rgba(230, 69, 34, 1);
+}
+
 .equipa{
   display: inline-block;
   margin-left: 50px;
@@ -60,6 +132,7 @@
   padding-bottom: 20px;
   width: 100%;
   left: 0;
+  padding-right: 5px;
 }
 
 hr{
@@ -212,9 +285,19 @@ html, body, {
 }
 
 .banner{
-  	background-image: url("../images/faixa.jpg");
+  	background-image: url("../images/footer.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.bannerLogo{
+  padding-top: 10px;
+  padding-left: 1px;
+  width: 210px;
+}
+
+a{
+  text-decoration: none !important;
 }
 
 html {
@@ -269,6 +352,7 @@ th{
 
 .ico{
   margin: auto;
+  padding-right:1px !important;
   text-align: center;
   font-weight: normal;
 }
@@ -277,6 +361,7 @@ th{
   margin: auto;
   text-align: center;
   font-weight: normal;
+  float: right !important;
 }
 
 .list-inline{
