--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -1,5 +1,12 @@
 html
     head
+        title MaismetroBH
+        link www.maismetrobh.com.br
+        meta(property="og:title", content="MaismetroBH")
+        meta(property="og:type", content="website")
+        meta(property="og:url", content="http://www.maismetrobh.com.br")
+        meta(property="og:image", content="../images/Logo.jpg")
+        meta(name="description", content="+METRO é uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte. Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o +Metro propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador.")
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(charset="utf-8")
         link(rel='stylesheet', href='../stylesheets/leaflet/leaflet.css')
@@ -8,29 +15,31 @@ html
         link(rel='stylesheet', href='../stylesheets/style2.css')
         link(rel='stylesheet', href='../stylesheets/bootstrap/bootstrap.min.css')
         link(rel='stylesheet', href="../stylesheets/rateyo/jquery.rateyo.min.css")
+        link(rel='stylesheet', href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css")
         script(src="../javascripts/jquery/jquery.min.js")
         script(src='../javascripts/bootstrap/bootstrap.min.js')
         script(src='../javascripts/leaflet/leaflet.js')
 
-    header(style='margin-bottom:80px;')
+    header(style='margin-bottom:70px')
       nav(class='navbar banner navbar-fixed-top')
         div.container
-          ul(class="list-inline", style='float: right; margin-top:26px; width:400px')
-            li.ico.col-md-3
-              a(href="/", style="color: rgb(255, 255, 255);") Início
-            li.ico.col-md-3
-              a(href="/projeto", style="color: rgb(255, 255, 255);") Projeto
-            li.ico.col-md-3
-              a(href="/contato", style="color: rgb(255, 255, 255);") Contato
+          img.bannerLogo(src='../images/+metro.png')
+          ul(class="list-inline", style='float: right; margin-top:32px; margin-right:15px; width:400px')
+            li.ico.col-sm-3
+              a(href="/", style="color: rgb(255, 255, 255); float: right") Início
+            li.ico.col-sm-3
+              a(href="/projeto", style="color: rgb(255, 255, 255); float: right") Projeto
+            li.ico.col-sm-3
+              a(href="/contato", style="color: rgb(255, 255, 255); float: right") Contato
             if (!user)
-              li.ico.col-md-3
-                a(href="/login", style="color: rgb(255, 255, 255);") Login
+              li.ico.col-sm-3
+                a(href="/login", style="color: rgb(255, 255, 255); float: right") Login
             if (user)
-              li.icofin.col-md-3
-                div.col-md-9(style='padding-right:0px; padding-left:0px')
-                  a.col-md-12(href="/ideasfind/"+'#{user.username}', style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Configurações
-                  a.col-md-12(href="/logout", style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Logout
-                div.col-md-3(style='padding-right:0px; padding-left:0px; padding-top:1px')
+              li.icofin.col-sm-3(style='padding-right:0px')
+                div.col-sm-9(style='padding-right:0px; padding-left:0px')
+                  a.col-sm-12(href="/ideasfind/"+'#{user.username}', style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Configurações
+                  a.col-sm-12(href="/logout", style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Logout
+                div.col-sm-3(style='padding-right:0px; padding-left:0px; padding-top:1px')
                   img(src='#{user.picture}', style="width:20px;height:20px;border-radius:1px; border-radius:100%")
 
     block content
