--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout2
 
 block content
   body
-    div.container(style='padding-top:50px')
+    div.container(style='padding-top:60px')
       div(class="col-sm-5", style='padding: 0px;')
         img.logo(src='../images/Logo.jpg')
         if (user)
@@ -46,7 +46,7 @@ block content
             div.social.col-sm-12
               ul
                 li.col-sm-4
-                  a(name="fb_share", href="http://www.facebook.com/sharer.php")
+                  a(name="fb_share", href="https://www.facebook.com/sharer/sharer.php?u=www.maismetrobh.com.br")
                     i.fa.fa-lg.fa-facebook
                 li.col-sm-4
                   a(href='https://twitter.com/home?status=www.maismetrobh.com.br')
