--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -4,7 +4,7 @@ html
         meta(property="og:title", content="MaismetroBH")
         meta(property="og:type", content="website")
         meta(property="og:url", content="http://www.maismetrobh.com.br")
-        meta(property="og:image", content="../images/Logo.jpg")
+        meta(property="og:image", content="http://www.maismetrobh.com.br/images/Logoface.png")
         meta(name="description", content="+METRO é uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte. Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o +Metro propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador.")
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(charset="utf-8")
@@ -14,7 +14,7 @@ html
         link(rel='stylesheet', href='../stylesheets/style2.css')
         link(rel='stylesheet', href='../stylesheets/bootstrap/bootstrap.min.css')
         link(rel='stylesheet', href="../stylesheets/rateyo/jquery.rateyo.min.css")
-        link(rel='stylesheet', href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css")
+        link(rel='stylesheet', href="../stylesheets/bootstrap/font-awesome.min.css")
         script(src="../javascripts/jquery/jquery.min.js")
         script(src='../javascripts/bootstrap/bootstrap.min.js')
         script(src='../javascripts/leaflet/leaflet.js')
