--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -462,6 +462,13 @@ textoblue{
   font-weight: bold;
 }
 
+.loading{
+  display: none;
+  height: 36px;
+  margin-top: 10px;
+  margin-bottom: 6px;
+}
+
 .textbox{
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
