--- a/views/index.jade
+++ b/views/index.jade
@@ -40,7 +40,7 @@ block content
               img.thumbs(src='../images/Thumbs/debate.jpg')
               p.thumbsTxt Entre no debate
           div(class="col-sm-3", style="padding: 0px;")
-            a#media(class='b')
+            a#media(class='b', href="#media")
               img.thumbs(src='../images/Thumbs/redes-sociais.jpg')
               p.thumbsTxt Partilhe nas redes
             div.social.col-sm-12
