--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -22,7 +22,7 @@ html
     header(style='margin-bottom:70px')
       nav(class='navbar banner navbar-fixed-top')
         div.container
-          a(href="/")
+          a#mainLogo(href="/")
             img.bannerLogo(src='../images/+metro.png')
           ul(class="list-inline", style='float: right; margin-top:32px; margin-right:15px; width:400px')
             li.ico.col-sm-3
