--- a/views/user.jade
+++ b/views/user.jade
@@ -5,59 +5,36 @@ block content
       div.container
         h1(style='text-align:center;') Sua Página
         div(class="row placeholders")
-          div(class="col-sm-12 placeholder", style='float:center;')
+          div(class="col-xs-12 placeholder", style='float:center;')
             img(src='#{user.picture}', style='width=70px; height:70px;', class='img-responsive')
             h4 #{user.username}
             span(class="text-muted") #{user.email}
-        div(class='col-md-12')
+        div(class='col-xs-12')
           h2.sub-header Propostas
-            div.table.table-striped
-              table.table.table-striped
-                thead
+          div.table.table-striped
+            table.table.table-striped
+              thead
+                tr
+                  th
+                  th referências
+                  th data
+                  th comentários
+                  th avaliações
+                  th
+              tbody
+                - each proposta in data
                   tr
-                    th
-                    th referências
-                    th data
-                    th comentários
-                    th avaliações
-                    th
-                tbody
-                  - each proposta in data
-                    tr
-                      td
-                        img(src='../images/Metro_Logo.png', style='width:25px')
-                      td #{proposta.refs}
-                      td #{proposta.date}
-                      td #{proposta.comments.length}
-                      td #{proposta.rating.length}
-                      td
-                        button(id='#{proposta.refs}', data-selector="#{proposta._id}") Apagar
+                    td
+                      img(src='../images/Metro_Logo.png', style='width:25px')
+                    td #{proposta.refs}
+                    td #{proposta.date}
+                    td #{proposta.comments.length}
+                    td #{proposta.rating.length}
+                    td
+                      button(id='#{proposta.refs}', data-selector="#{proposta._id}") Apagar
 
 
-    footer(class="footer")
-      div.container
-        div.col-md-4
-          ul.ulmapasite Mapa do site
-            li.liredux
-              a.mapasite(href="/") Início
-            li.liredux
-              a.mapasite(href="/addidea/") Novo Trajeto
-            li.liredux
-              a.mapasite(href="#debate") Debate
-            li.liredux
-              a.mapasite(href="/contato/") Contato
-            li.liredux
-              a.mapasite(href="/projeto/") Projeto
-        div.col-md-8(style='padding-right:10px;')
-          div.col-md-12(style='padding-right:0px; margin-top:10px')
-            img.siganos(src='../images/footer_03.png', style='float:right')
-          ul(class="list-inline", style='float: right; margin-top:10px')
-            a(href="https://www.facebook.com")
-              img.redes(src='../images/footer_05.png')
-            a(href="https://www.twitter.com")
-              img.redes(src='../images/footer_07.png')
-            a(href="https://plus.google.com")
-              img.redes(src='../images/footer_06.png')
+    include ./footer.jade
 
 
     // Scripts
