--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -2,11 +2,6 @@ doctype html
 html
     head
         title MaismetroBH
-        meta(property="og:title", content="MaismetroBH")
-        meta(property="og:type", content="website")
-        meta(property="og:url", content="http://www.maismetrobh.com.br")
-        meta(property="og:image", content="http://www.maismetrobh.com.br/images/Logoface.png")
-        meta(name="description", content="+METRO é uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte. Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o +Metro propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador.")
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(charset="utf-8")
         link(rel='stylesheet', href='../stylesheets/leaflet/leaflet.css')
@@ -22,25 +17,31 @@ html
 
     header(style='margin-bottom:70px')
       nav(class='navbar banner navbar-fixed-top')
-        div.container
-          a#mainLogo(href="/")
+        div.container(style='padding:0')
+          a#mainLogo.hidden-xs.col-md-4(href="/")
             img.bannerLogo(src='../images/+metro.png')
-          ul(class="list-inline", style='float: right; margin-top:32px; margin-right:15px; width:400px')
-            li.ico.col-xs-3
-              a(href="/", style="color: rgb(255, 255, 255); float: right") Início
-            li.ico.col-xs-3
-              a(href="/projeto", style="color: rgb(255, 255, 255); float: right") Projeto
-            li.ico.col-xs-3
-              a(href="/contato", style="color: rgb(255, 255, 255); float: right") Contato
+          ul.col-xs-12.col-md-8(class="list-inline", style='float: right; margin-top:25px; margin-right:15px; width:400px')
             if (!user)
+              li.ico.col-xs-3
+                a(href="/", style="color: rgb(255, 255, 255); float: right") Início
+              li.ico.col-xs-3
+                a(href="/projeto", style="color: rgb(255, 255, 255); float: right") Projeto
+              li.ico.col-xs-3
+                a(href="/contato", style="color: rgb(255, 255, 255); float: right") Contato
               li.ico.col-xs-3
                 a(href="/login", style="color: rgb(255, 255, 255); float: right") Login
             if (user)
-              li.icofin.col-xs-3(style='padding-right:0px')
+              li.ico.col-xs-2
+                a(href="/", style="color: rgb(255, 255, 255); float: right") Início
+              li.ico.col-xs-3
+                a(href="/projeto", style="color: rgb(255, 255, 255); float: right") Projeto
+              li.ico.col-xs-3
+                a(href="/contato", style="color: rgb(255, 255, 255); float: right") Contato
+              li.icofin.col-xs-4
                 div.col-xs-9(style='padding-right:0px; padding-left:0px')
                   a.col-xs-12(href="/ideasfind/"+'#{user.username}', style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Configurações
                   a.col-xs-12(href="/logout", style="color: rgb(255, 255, 255); font-size:8px; text-align:right; padding-right:5px; padding-left:5px") Logout
-                div.col-xs-3(style='padding-right:0px; padding-left:0px; padding-top:1px')
-                  img(src='#{user.picture}', style="width:20px;height:20px;border-radius:1px; border-radius:100%")
+                div.col-xs-3(style='padding-left:0px; margin-top:-8px;')
+                  img(src='#{user.picture}', style="width:30px;height:30px;border-radius:1px; border-radius:100%")
 
     block content
